@@ -1,12 +1,5 @@
 class Enrollment < ActiveRecord::Base
-  has_many :articles, :order => "id DESC" , :dependent => :destroy
-#   after_save :clean_enrollment
-#
-#   def clean_enrollment
-#     if self.articles.size == 0
-#       self.destroy
-#     end
-#   end
+  has_many :articles, :order => "id DESC", :dependent => :destroy
 
   def self.search(query)
     if !query.to_s.strip.empty?
